# ndsolver

./: .gitignore  CITING  README.md  TODO.md  __init__.py  benchmark.py  cli.py  core.py  cython_the_core.sh  hdf5.py  moveMods.py  mpitest.py  nd_domain.py  pyproject.toml  qqueue.py  remote-solve.py  requirements.txt  summarize.py  sv-approximations.py  text_test.py  tiny-tril-test.py  unittest_validate.py
.github/workflows/: ci.yml
ndsolver/: __init__.py  cli.py  core.py  hdf5.py  nd_domain.py
ndsolver/symbolic/: eq_solver.py  equation.py  ndim_eq.py  ndimed.py
scripts/: benchmark.py  mpitest.py  qqueue.py  remote-solve.py  summarize.py  sv-approximations.py  tiny-tril-test.py
symbolic/: ndim_eq.py  ndimed.py
symbolic/.svn/: entries
symbolic/.svn/text-base/: Equation.py.svn-base  eq_solver.py.svn-base
tests/: __init__.py  test_domains.py  test_solver.py  test_validate.py
